# MultithreadedContentModerator

./: CMakeLists.txt  README.md  txt_file
include/: OffensiveWordRule.h  ResultCollector.h  Rule.h  RuleEngine.h  Scanner.h  ThreadPool.h  Tokenizer.h
src/: OffensiveWordRule.cpp  ResultCollector.cpp  RuleEngine.cpp  Scanner.cpp  ThreadPool.cpp  Tokenizer.cpp  main.cpp
